--- a/forum-click.html
+++ b/forum-click.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/Navigation-with-Search.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles-forum_click.css">
 </head>
 
 <body class="d-xl-flex" style="margin-right: 0px;">
@@ -34,46 +34,38 @@
     </div>
     </nav>
     </div>
-    
     <div class="container">
-        
-        <h1 id="forum-heading" style="margin-top: 100px;">Forum</h1>
+        <div class="container"></div>
+        <h1 id="forum-heading" style="margin-top: 10px;">Forum</h1>
         <div class="container" id="forum-box1" style="margin-left: 0px;margin-right: 0px;padding: 0;padding-top: 18px;padding-right: 0px;padding-left: 20px;text-align: left;max-width: 90%;padding-bottom: 15px;width: 964px;height: 252px;"><span class="d-flex" id="forum-box1-text" style="padding-top: 0px;">Home / Forum / Kalkulus / Persamaan Diferensial<br></span></div>
-            <div class="container-fluid box2" id="forum-box-1" style="margin-top: 30px;margin-left: 0px;margin-right: 0px;padding: 0;padding-top: 18px;padding-right: 0px;padding-left: 20px;text-align: left;max-width: 90%;padding-bottom: 15px;width: 964px;height: 222.5px;">
-                <div style="width: 390px;"><p class="gray-text">Dipublikasikan oleh Alex, kemarin pukul 19.04</p>
-                    <p class='forum-title'> Persamaan Diferensial </p>
-                    <p class='forum-question'>Bagaimana menyelesaikan soal berikut.</p>
-                    <p class='forum-question'>y"-5y'+6y=0</p>
-                </div>
-        <div class="text-left d-lg-flex" id="kutip-balas" style="width: 615px;">
-            <div class='kutip-balas'>
-
-
-                <span> 
-                    <br><br><br><br><br><br><br><br><br><br>
-                </span>
-                <span> <img src="assets/img/image%2029.png" width='12px' height='12px'> </span>
-                <span>Kutip</span>
-                &ensp;
-                <span> <img src="assets/img/image%2030.png" width='12px' height='12px'></span>
-                <span>Balas</span>
-            </div>
+        <div class="container-fluid box2" id="forum-box-1" style="margin-top: 30px;margin-left: 0px;margin-right: 0px;padding: 0;padding-top: 18px;padding-right: 0px;padding-left: 20px;text-align: left;max-width: 90%;padding-bottom: 15px;width: 964px;height: 230px;">
+            <div style="width: 315px;"><p class="gray-text">Dipublikasikan oleh Alex, kemarin pukul 19.04</p>
+<p class='forum-title'> Persamaan Diferensial </p>
+<p class='forum-question'>Bagaimana menyelesaikan soal berikut.</p>
+<br>
+<p class='forum-question'>y"-5y'+6y=0</p>
+</div>
+            <div class="text-left d-lg-flex" id="kutip-balas" style="width: 615px;"><br><br><br><br><br><br><br>
+<div class='kutip-balas'>
+    <span> <img src="assets/img/image%2029.png" width='15px' height='15px'></span>
+    <span>Kutip</span>
+    &ensp;
+    <span> <img src="assets/img/image%2030.png" width='15px' height='15px'></span>
+    <span>Balas</span>
+</div></div>
         </div>
-    </div>
         <div class="container-fluid box2" id="forum-box-2" style="margin-top: 30px;margin-left: 0px;margin-right: 0px;padding: 0;padding-top: 18px;padding-right: 0px;padding-left: 20px;text-align: left;max-width: 90%;padding-bottom: 15px;width: 964px;height: 168px;">
             <div style="width: 913px;"><p class="gray-text">Dipublikasikan oleh Shafira, kemarin pukul 21.04</p>
-                <br>
-                <p class='solution-text'>Gunakan substitusi dimana y'=m, maka didapat nilai m untuk pembuat 0 dari persamaan kuadrat tersebut. lalu masukan ke dalam teorema A.
-                <div id="kutip-balas" style="height: 100px;padding-left: 7px;padding-right: 5px;width: 931px;">
-                    <div class='kutip-balas'>
-                        <span><br></span>
-                        <span> <img src="assets/img/image%2029.png" width='12px' height='12px'></span>
-                        <span>Kutip</span>
-                        &ensp;
-                        <span> <img src="assets/img/image%2030.png" width='12px' height='12px'></span>
-                        <span>Balas</span>
-                    </div>
-                </div>
+<br>
+<p class='solution-text'>Gunakan substitusi dimana y'=m, maka didapat nilai m untuk pembuat 0 dari persamaan kuadrat tersebut. lalu masukan ke dalam teorema A.
+                <div id="kutip-balas2" style="padding-bottom: 0px;height: 100px;padding-left: 7px;padding-right: 1px;width: 931px;">
+<div class='kutip-balas'>
+    <span> <img src="assets/img/image%2029.png" width='15px' height='15px'></span>
+    <span>Kutip</span>
+    &ensp;
+    <span> <img src="assets/img/image%2030.png" width='15px' height='15px'></span>
+    <span>Balas</span>
+</div></div>
             </div>
         </div>
     </div>
