--- a/forum-click.html
+++ b/forum-click.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Forum-click</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Patua+One">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/Navigation-with-Search.css">
@@ -16,7 +16,7 @@
 <body class="d-xl-flex" style="margin-right: 0px;">
     <div id="navigation">
         <nav class="navbar navbar-light navbar-expand-lg fixed-top navigation-clean-search" style="padding: 16px;margin-left: 0;color: rgb(0,0,0);background-color: #09b1ec;">
-            <div class="container"><a class="navbar-brand" href="#home" style="font-size: 25px;font-family: 'Playfair Display', serif;letter-spacing: 16px;">ELEVEN</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1" style="border-color: rgb(0,0,0);"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container"><a class="navbar-brand" href="index.html" style="font-size: 25px;font-family: 'Playfair Display', serif;letter-spacing: 16px;">ELEVEN</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1" style="border-color: rgb(0,0,0);width: auto;"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div
                     class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav ml-auto">
@@ -28,14 +28,14 @@
                                 </div>
                             </form>
                         </li>
-                        <li class="nav-item" role="presentation" style="color: black;"><a class="nav-link" href="#" style="color: rgb(0,0,0);">Kelasku</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);">Kelas</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);">Forum</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="#" style="color: rgb(0,0,0);"><i class="fa fa-gear"></i>&nbsp;Pengaturan</a></li>
+                        <li class="nav-item" role="presentation" style="color: black;"><a class="nav-link" href="my-course.html" style="color: rgb(0,0,0);">Kelasku</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="course.html" style="color: rgb(0,0,0);">Kelas</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="forumlandingpage.html" style="color: rgb(0,0,0);">Forum</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="settings_front.html" style="color: rgb(0,0,0);"><i class="fa fa-gear"></i>&nbsp;Pengaturan</a></li>
                     </ul>
-                </div>
             </div>
-        </nav>
+    </div>
+    </nav>
     </div>
     <div class="container">
         <div class="container"></div>
